# mandelbrot-qt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ColourMap.hpp  ColourMapImpl.cpp  ColourMapImpl.hpp  Fractals.cpp  README.md  RGB.hpp  Renderer.cpp  Renderer.hpp  RenderingSequence.cpp  RenderingSequence.hpp  TODO.md  ViewerWidget.cpp  ViewerWidget.h  Viewport.hpp  bookmarks.json  gotodialog.cpp  gotodialog.h  gotodialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registry.cpp  registry.hpp
.github/workflows/: cmake-multi-platform.yml
doc/: TODO.md  faq.md  implementation.md
src/: AnimatedRenderer.cpp  AnimatedRenderer.hpp  AsyncRenderer.cpp  AsyncRenderer.hpp  CMakeLists.txt  ColourMap.hpp  ColourMapImpl.cpp  ColourMapImpl.hpp  Fractals.cpp  RGB.hpp  Renderer.cpp  Renderer.hpp  RenderingMetrics.hpp  ViewerWidget.cpp  ViewerWidget.h  Viewport.cpp  Viewport.hpp  addbookmark.cpp  addbookmark.h  addbookmark.ui  bookmarks.json  controlpanel.cpp  controlpanel.h  controlpanel.ui  gotodialog.cpp  gotodialog.h  gotodialog.ui  icon.icns  json.cpp  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registry.cpp  registry.hpp  resources.qrc
